--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ CLOUDINARY_API_KEY="555361729357148"
 CLOUDINARY_SECRET_KEY="SVR0O1OVUFbSD0ugsDMXHYLlHN0"
 CLOUDINARY_NAME="dcfowraov"
 JWT_SECRET = "uttammaurya123"
+ADMIN_EMAIL="uttammaurya377@gmail.com"
+ADMIN_PASSWORD="uttammaurya123"
