--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,4 @@ CLOUDINARY_NAME="dcfowraov"
 JWT_SECRET = "uttammaurya123"
 ADMIN_EMAIL="uttammaurya377@gmail.com"
 ADMIN_PASSWORD="uttammaurya123"
+PORT=4000;
